--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 
             }
         </style>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="/tvcultivo/js/util/tools.js"></script>
     </head>
     <body class="container">
         <div class="row">
@@ -121,4 +123,10 @@
             </div>
         </div>
     </body>
+    <script>
+        (function(){
+            var tool = new Tools();
+            sessionStorage.setItem('origen', tool.fn.UrlParam('origen'))
+        })();
+    </script>
 </html>
